--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="" type="image/x-icon">
   </head>
   <body>
-    
+    <nav>
+      <h1>The Food Shortage</h1>
+      <ul>
+        <li><a href="#">What is the Shortage?</a></li>
+        <li><a href="#">COVID-19 Impact</a></li>
+        <li><a href="#">The Solution</a></li>
+      </ul>
+    </nav>
 
   </body>
 </html>
