--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <li><a href="#">The Solution</a></li>
       </ul>
     </nav>
-
+    <footer>
+      <ul>
+        <li><a href="#">What is the Shortage?</a></li>
+        <li><a href="#">COVID-19 Impact</a></li>
+        <li><a href="#">The Solution</a></li>
+      </ul>
+      <p>&copy 2021</p>
+    </footer>
   </body>
 </html>
