--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
     <nav>
       <h1>The Food Shortage</h1>
       <ul>
-        <li><a href="#">What is the Shortage?</a></li>
+        <li><a href="shortage.html">What is the Shortage?</a></li>
         <li><a href="#">COVID-19 Impact</a></li>
         <li><a href="#">The Solution</a></li>
       </ul>
     </nav>
+    <section id="banner-homepage">
+      <img src="imgs/corny-img.png" alt="corn" class="center">
+    </section>
     <footer>
       <ul>
-        <li><a href="#">What is the Shortage?</a></li>
+        <li><a href="shortage.html">What is the Shortage?</a></li>
         <li><a href="#">COVID-19 Impact</a></li>
         <li><a href="#">The Solution</a></li>
       </ul>
