--- a/shortage-page.html
+++ b/shortage-page.html
@@ -21,9 +21,9 @@
         <li><a href="#">The Solution</a></li>
       </ul>
     </nav
-    <img src="imgs/food.png" alt="World Undernourishment">
+    <img src="imgs/food.PNG" alt="World Undernourishment">
     <h2>Hunger, a Problem Worldwide</h2>
-    <img src="/imgs/food.png" alt="Undernourishment across the World" type="center">
+    <img src="/imgs/food.PNG" alt="Undernourishment across the World" type="center">
     <p>World hunger has been a consistent problem in the modern era for many decades now. Various factors such as conflict, socio-economic conditions,
       natural hazards, climate change and pests have always challenged the nourishment of people across the globe. While many underdeveloped nations have
       faced food shortages, nourishing all of your citizens is still a problem even in the U.S.A.</p>
