added page links to navbar

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav>
       <h1>The Food Shortage</h1>
       <ul>
-        <li><a href="shortage.html">What is the Shortage?</a></li>
-        <li><a href="#">COVID-19 Impact</a></li>
-        <li><a href="#">The Solution</a></li>
+        <li><a href="shortage-page.html">What is the Shortage?</a></li>
+        <li><a href="covid-page.html">COVID-19 Impact</a></li>
+        <li><a href="solution-page.html">The Solution</a></li>
       </ul>
     </nav>
     <section id="banner-homepage">
