--- a/index.html
+++ b/index.html
@@ -24,6 +24,37 @@
     <section id="banner-homepage">
       <img src="imgs/corny-img.png" alt="corn" class="center">
     </section>
+    <section id="description-boxes">
+      <div class="row">
+        <div class="box">
+          <div class="box-header">
+            <h1>What is the Shortage?</h1>
+          </div>
+          <div class="box-body">
+            <p>Find out several causes and the severity of the current world hunger crisis.</p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-header">
+            <h1>COVID-19 Impact</h1>
+          </div>
+          <div class="box-body">
+            <p>With the COVID-19 pandemic running rampant worldwide, take a look at how much worse this situation got.</p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-header">
+            <h1>What is the Shortage?</h1>
+          </div>
+          <div class="box-body">
+            <p>Find out how you can help solve this problem through charities and non-profit organizations.</p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <ul>
         <li><a href="shortage.html">What is the Shortage?</a></li>
