--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="box-body">
             <p>Find out several causes and the severity of the current world hunger crisis.</p>
-            <a href="#" class="btn">Read More</a>
+            <a href="shortage-page.html" class="btn">Read More</a>
           </div>
         </div>
         <div class="box">
@@ -58,8 +58,8 @@
     <footer>
       <ul>
         <li><a href="shortage.html">What is the Shortage?</a></li>
-        <li><a href="#">COVID-19 Impact</a></li>
-        <li><a href="#">The Solution</a></li>
+        <li><a href="covid-page.html">COVID-19 Impact</a></li>
+        <li><a href="solution-page.html">The Solution</a></li>
       </ul>
       <p>&copy 2021</p>
     </footer>
