--- a/shortage-page.html
+++ b/shortage-page.html
@@ -20,17 +20,26 @@
         <li><a href="covid-page.html">COVID-19 Impact</a></li>
         <li><a href="solution-page.html">The Solution</a></li>
       </ul>
-    </nav
+    </nav>
+    <div class="page-body">
+      <h2 class="page-header">Hunger, a Problem Worldwide</h2>
+      <img src="imgs/food.png" alt="Undernourishment across the World" type="center">
 
-    <h2>Hunger, a Problem Worldwide</h2>
-    <img src="imgs/food.png" alt="Undernourishment across the World" type="center">
+      <p>World hunger has been a consistent problem in the modern era for many decades now. Various factors such as conflict, socio-economic conditions,
+        natural hazards, climate change and pests have always challenged the nourishment of people across the globe. While many underdeveloped nations have
+        faced food shortages, nourishing all of your citizens is still a problem even in the U.S.A.</p>
 
-    <p>World hunger has been a consistent problem in the modern era for many decades now. Various factors such as conflict, socio-economic conditions,
-      natural hazards, climate change and pests have always challenged the nourishment of people across the globe. While many underdeveloped nations have
-      faced food shortages, nourishing all of your citizens is still a problem even in the U.S.A.</p>
-
-    <p>Despite there being enough food produced worldwide to feed everyone, over 690 million people go hungry worldwide. The UN estimates that 122 million
-      of 144 million stunted children live in countries affected by conflict and an estimated 14 million children under the age of five worldwide suffer
-      from severe acute malnutrition.</p>
+      <p>Despite there being enough food produced worldwide to feed everyone, over 690 million people go hungry worldwide. The UN estimates that 122 million
+        of 144 million stunted children live in countries affected by conflict and an estimated 14 million children under the age of five worldwide suffer
+        from severe acute malnutrition.</p>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="shortage-page.html">What is the Shortage?</a></li>
+        <li><a href="covid-page">COVID-19 Impact</a></li>
+        <li><a href="solution-page.html">The Solution</a></li>
+      </ul>
+      <p>&copy 2021</p>
+    </footer>
   </body>
 </html>
