--- a/solution-page.html
+++ b/solution-page.html
@@ -21,27 +21,33 @@
         <li><a href="solution-page.html">The Solution</a></li>
       </ul>
     </nav>
+    <div class="page-body">
+      <h2 class="page-header">How to Help</h2>
+    	<img src = "imgs/worldcentralkitchen-logo.png" alt = "World Central Kitchen"style= "width: 80%; padding-top: 50px;">
+    	<p>World Central Kitchen is a non-profit organization whose goal is to provide meals to those who are struggling during natural disasters.  In this current crisis of COVID-19, they have already</p>
+    	<ul>
+    		<li><strong>Provided over 35 million meals in more than 400 cities</strong></li>
+    		<li><strong>Purchased over 12 million meals from local restaurants totaling more than $135 million</strong></li>
+    	</ul>
+    	<p>Not only are they distributing food to those who are in need, they are lifting the economy by keeping restaurants in service.</p>
 
-	<h2>How to Help</h2>
-	
-	<img src = "imgs/worldcentralkitchen-logo.png" alt = "World Central Kitchen">
-	<p>World Central Kitchen is a non-profit organization whose goal is to provide meals to those who are struggling during natural disasters.  In this current crisis of COVID-19, they have already</p>
-	<ul>
-		<li>provided over 35 million meals in more than 400 cities</li>
-		<li>purchased over 12 million meals from local restaurants totaling more than $135 million</li>
-	</ul>
-	<p>Not only are they distributing food to those who are in need, they are lifting the economy by keeping restaurants in service.</p>
-	
-	<a href = "https://wck.org/chefsforamerica">Donate to Worlc Central Kitchen</a>
-	<br>
-	<img src = "imgs/feedingamerica-logo.png" alt = "Feeding America">
-	<p>Feeding America is a United States–based nonprofit organization that is a nationwide network of more than 200 food banks that feed more than 46 million people through food pantries, soup kitchens, shelters, and other community-based agencies. During COVID-19, they have</p>
-	<ul>
-		<li>Distributed 5.3 million meals</li>
-		<li>Raised $316 million for their Covid-19 relief fund</li>
-	</ul>
-	
-	<a href = "https://www.feedingamerica.org/take-action/coronavirus">Donate to Feeding America</a>
-	
+    	<a href = "https://wck.org/chefsforamerica" class = "page-btn">Donate to World Central Kitchen</a>
+    	<br>
+    	<img src = "imgs/feedingamerica-logo.png" alt = "Feeding America">
+    	<p>Feeding America is a United States–based nonprofit organization that is a nationwide network of more than 200 food banks that feed more than 46 million people through food pantries, soup kitchens, shelters, and other community-based agencies. During COVID-19, they have</p>
+    	<ul>
+    		<li><strong>Distributed 5.3 million meals</strong></li>
+    		<li><strong>Raised $316 million for their Covid-19 relief fund</strong></li>
+    	</ul>
+    	<a href = "https://www.feedingamerica.org/take-action/coronavirus" class ="page-btn">Donate to Feeding America</a>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="shortage.html">What is the Shortage?</a></li>
+        <li><a href="covid-page.html">COVID-19 Impact</a></li>
+        <li><a href="shortage-page.html">The Solution</a></li>
+      </ul>
+      <p>&copy 2021</p>
+    </footer>
   </body>
 </html>
