--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Food Shortage | Home</title>
-    <meta name="description" content="">
+    <meta name="description" content="The world hunger crisis has taken a turn for the worse due to COVID. Here's what you can do.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,20 +12,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="" type="image/x-icon">
   </head>
-  <body class="Header">
+  <body>
+    <!-- The Header that stays on the top of the page -->
     <nav>
       <h1>The Food Shortage</h1>
+      <!-- Hyper links to different pages -->
       <ul>
         <li><a href="shortage-page.html">What is the Shortage?</a></li>
         <li><a href="covid-page.html">COVID-19 Impact</a></li>
         <li><a href="solution-page.html">The Solution</a></li>
       </ul>
     </nav>
+    <!-- image banner relative to the cause -->
     <section id="banner-homepage">
       <img src="imgs/corny-img.png" alt="corn" class="center">
     </section>
+    <!-- small description of each page with a link to each page -->
     <section id="description-boxes">
       <div class="row">
+        <!-- What is the Shortage page description -->
         <div class="box">
           <div class="box-header">
             <h1>What is the Shortage?</h1>
@@ -35,6 +40,7 @@
             <a href="shortage-page.html" class="btn">Read More</a>
           </div>
         </div>
+        <!-- COVID-19 impact page description with link -->
         <div class="box">
           <div class="box-header">
             <h1>COVID-19 Impact</h1>
@@ -44,6 +50,7 @@
             <a href="covid-page.html" class="btn">Read More</a>
           </div>
         </div>
+        <!-- Description of Solution page -->
         <div class="box">
           <div class="box-header">
             <h1>How to Help</h1>
@@ -55,6 +62,7 @@
         </div>
       </div>
     </section>
+    <!-- footer at the bottom of the page -->
     <footer>
       <ul>
         <li><a href="shortage-page.html">What is the Shortage?</a></li>
