--- a/shortage-page.html
+++ b/shortage-page.html
@@ -12,18 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="" type="image/x-icon">
   </head>
-  <body class="Header">
+  <body class="Header"> <!--The header section contains infromation such as the navbar, website title, and links to the 3 web pages-->
     <nav>
-      <h1>The Food Shortage</h1>
+      <h1>The Food Shortage</h1> <!-- Title -->
       <ul>
-        <li><a href="shortage-page.html">What is the Shortage?</a></li>
+        <li><a href="shortage-page.html">What is the Shortage?</a></li> <!-- Names and links to the 3 pages -->
         <li><a href="covid-page.html">COVID-19 Impact</a></li>
         <li><a href="solution-page.html">The Solution</a></li>
       </ul>
     </nav>
-    <div class="page-body">
-      <h2 class="page-header">Hunger, a Problem Worldwide</h2>
-      <img src="imgs/food.png" alt="Undernourishment across the World" type="center">
+    <div class="page-body"> <!--The body section is where all of the information/short description of the world hunger crisis will go. There is also a graph here-->
+      <h2 class="page-header">Hunger, a Problem Worldwide</h2> <!-- Subtitle -->
+      <img src="imgs/food.png" alt="Undernourishment across the World" type="center"> <!-- Graph with a centered title -->
 
       <p>World hunger has been a consistent problem in the modern era for many decades now. Various factors such as conflict, socio-economic conditions,
         natural hazards, climate change and pests have always challenged the nourishment of people across the globe. While many underdeveloped nations have
@@ -33,7 +33,7 @@
         of 144 million stunted children live in countries affected by conflict and an estimated 14 million children under the age of five worldwide suffer
         from severe acute malnutrition.</p>
     </div>
-    <footer>
+    <footer> <!-- The footer of the page is very simple, containing once again links to the three pages-->
       <ul>
         <li><a href="shortage-page.html">What is the Shortage?</a></li>
         <li><a href="covid-page">COVID-19 Impact</a></li>
