added comments and reformatted code so it is easier to navigate, edit, and read

--- a/shortage-page.html
+++ b/shortage-page.html
@@ -12,25 +12,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="" type="image/x-icon">
   </head>
-  <body>
+  <body class="Header"> <!--The header section contains infromation such as the navbar, website title, and links to the 3 web pages-->
     <nav>
-      <h1>The Food Shortage</h1>
+      <h1>The Food Shortage</h1> <!-- Title -->
       <ul>
-        <li><a href="shortage-page.html">What is the Shortage?</a></li>
+        <li><a href="shortage-page.html">What is the Shortage?</a></li> <!-- Names and links to the 3 pages -->
         <li><a href="covid-page.html">COVID-19 Impact</a></li>
         <li><a href="solution-page.html">The Solution</a></li>
       </ul>
-    </nav
+    </nav>
+    <div class="page-body"> <!--The body section is where all of the information/short description of the world hunger crisis will go. There is also a graph here-->
+      <h2 class="page-header">Hunger, a Problem Worldwide</h2> <!-- Subtitle -->
+      <img src="imgs/food.png" alt="Undernourishment across the World" type="center"> <!-- Graph with a centered title -->
 
-    <h2>Hunger, a Problem Worldwide</h2>
-    <img src="imgs/food.png" alt="Undernourishment across the World" type="center">
+      <p>World hunger has been a consistent problem in the modern era for many decades now. Various factors such as conflict, socio-economic conditions,
+        natural hazards, climate change and pests have always challenged the nourishment of people across the globe. While many underdeveloped nations have
+        faced food shortages, nourishing all of your citizens is still a problem even in the U.S.A.</p>
 
-    <p>World hunger has been a consistent problem in the modern era for many decades now. Various factors such as conflict, socio-economic conditions,
-      natural hazards, climate change and pests have always challenged the nourishment of people across the globe. While many underdeveloped nations have
-      faced food shortages, nourishing all of your citizens is still a problem even in the U.S.A.</p>
-
-    <p>Despite there being enough food produced worldwide to feed everyone, over 690 million people go hungry worldwide. The UN estimates that 122 million
-      of 144 million stunted children live in countries affected by conflict and an estimated 14 million children under the age of five worldwide suffer
-      from severe acute malnutrition.</p>
+      <p>Despite there being enough food produced worldwide to feed everyone, over 690 million people go hungry worldwide. The UN estimates that 122 million
+        of 144 million stunted children live in countries affected by conflict and an estimated 14 million children under the age of five worldwide suffer
+        from severe acute malnutrition.</p>
+    </div>
+    <footer> <!-- The footer of the page is very simple, containing once again links to the three pages-->
+      <ul>
+        <li><a href="shortage-page.html">What is the Shortage?</a></li>
+        <li><a href="covid-page">COVID-19 Impact</a></li>
+        <li><a href="solution-page.html">The Solution</a></li>
+      </ul>
+      <p>&copy 2021</p>
+    </footer>
   </body>
 </html>
