--- a/solution-page.html
+++ b/solution-page.html
@@ -16,6 +16,7 @@
     <nav>
       <h1>The Food Shortage</h1>
       <ul>
+	<!-- navbar links to other pages -->
         <li><a href="shortage-page.html">What is the Shortage?</a></li>
         <li><a href="covid-page.html">COVID-19 Impact</a></li>
         <li><a href="solution-page.html">The Solution</a></li>
@@ -23,6 +24,7 @@
     </nav>
     <div class="page-body">
       <h2 class="page-header">How to Help</h2>
+      <!-- description of charities -->
     	<img src = "imgs/worldcentralkitchen-logo.png" alt = "World Central Kitchen"style= "width: 80%; padding-top: 50px;">
     	<p>World Central Kitchen is a non-profit organization whose goal is to provide meals to those who are struggling during natural disasters.  In this current crisis of COVID-19, they have already</p>
     	<ul>
